[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "rai_compos_pub"
version = "0.0.0"
description = "Publicly available components for RAIMAD"
authors = [
	{name = "maybetree", email = "maybetree48@proton.me"}
# Any collaborators, please add yourself here.
# Feel free to put a stub address like `no@email.com`
	]
license = { text = "we haven't decided yet" }
readme = "README.md"
classifiers = [
	'Programming Language :: Python :: 3',
	]
requires-python = ">=3.10"

dependencies = [
	"raimad",
	]

